# first-elt

./: Makefile  docker-compose.yml  main.py  pyproject.toml
db/migrations/: 000001_order_table.down.sql  000001_order_table.up.sql
first_elt/: aws.py  db.py  s3.py
