[tool.poetry]
name = "first-elt"
version = "0.1.0"
description = ""
authors = ["Nayyara Airlangga <nayyara.airlangga@gmail.com>"]
readme = "README.md"
packages = [{include = "first_elt"}]

[tool.poetry.dependencies]
python = "^3.11"
configparser = "^5.3.0"
boto3 = "^1.26.162"
psycopg2 = "^2.9.6"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.3.0"
flake8 = "^6.0.0"
types-psycopg2 = "^2.9.21.10"
boto3-stubs = {extras = ["essential"], version = "^1.28.5"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
